@@ -1,3 +1,8 @@
+09-Jun-2015 Laurent Duflot
+	* FilterUpdateMerge.py: update for Run 2 stream; few protections added
+	* launch_jobs_on_grid.py: add --noGRL option, add p2363 support,
+	further reduction of the output dataset length
+
 08-Jun-2015 Laurent Duflot
 	* launch_jobs_on_grid.py: add p2363
 
